static methods protection